--- a/user.css
+++ b/user.css
@@ -11,7 +11,7 @@
     --dialog-gray: #808080;
     --dialog-gray-light: #b5b5b5;
     --link-blue: #0000ff;
-    
+  
     /* Spacing */
     --element-spacing: 8px;
     --grouped-button-spacing: 4px;
@@ -21,7 +21,7 @@
     --radio-label-spacing: 6px;
     --range-track-height: 4px;
     --range-spacing: 10px;
-    
+  
     /* Some detailed computations for radio buttons and checkboxes */
     --radio-total-width-precalc: var(--radio-width) + var(--radio-label-spacing);
     --radio-total-width: calc(var(--radio-total-width-precalc));
@@ -29,11 +29,72 @@
     --radio-dot-width: 4px;
     --radio-dot-top: calc(var(--radio-width) / 2 - var(--radio-dot-width) / 2);
     --radio-dot-left: calc(
-        -1 * (var(--radio-total-width-precalc)) + var(--radio-width) / 2 - var(
-            --radio-dot-width
+      -1 * (var(--radio-total-width-precalc)) + var(--radio-width) / 2 - var(
+          --radio-dot-width
         ) / 2
     );
+  
+    --checkbox-total-width-precalc: var(--checkbox-width) +
+      var(--radio-label-spacing);
+    --checkbox-total-width: calc(var(--checkbox-total-width-precalc));
+    --checkbox-left: calc(-1 * var(--checkbox-total-width-precalc));
+    --checkmark-width: 7px;
+    --checkmark-top: 3px;
+    --checkmark-left: 3px;
+  
+    /* Borders */
+    --border-width: 1px;
+    --border-raised-outer: inset -1px -1px var(--window-frame),
+      inset 1px 1px var(--button-highlight);
+    --border-raised-inner: inset -2px -2px var(--button-shadow),
+      inset 2px 2px var(--button-face);
+    --border-sunken-outer: inset -1px -1px var(--button-highlight),
+      inset 1px 1px var(--window-frame);
+    --border-sunken-inner: inset -2px -2px var(--button-face),
+      inset 2px 2px var(--button-shadow);
+  
+    /* Window borders flip button-face and button-highlight */
+    --border-window-outer: inset -1px -1px var(--window-frame),
+      inset 1px 1px var(--button-face);
+    --border-window-inner: inset -2px -2px var(--button-shadow),
+      inset 2px 2px var(--button-highlight);
+  
+    /* Field borders (checkbox, input, etc) flip window-frame and button-shadow */
+    --border-field: inset -1px -1px var(--button-highlight),
+      inset 1px 1px var(--button-shadow), inset -2px -2px var(--button-face),
+      inset 2px 2px var(--window-frame);
 }
+
+/* playlists */
+
+.main-rootlist-rootlistItemLink.main-rootlist-rootlistItemLinkActive{
+    box-shadow: var(--border-sunken-outer), var(--border-sunken-inner);
+    padding: 2px 11px 0 13px;
+}
+
+.main-rootlist-rootlistItemLink {
+    box-sizing: border-box;
+    border: none;
+    background: var(--surface);
+    box-shadow: var(--border-raised-outer), var(--border-raised-inner);
+    border-radius: 0;
+  
+    min-width: 75px;
+    min-height: 23px;
+    padding: 0 12px;
+    margin-top: 5px;
+}
+
+.main-rootlist-rootlistItemLink:hover{
+    outline: 1px dotted #000000;
+    outline-offset: -4px;
+}
+
+.main-rootlist-statusIcons {
+    display: none;
+}
+
+/* end of playlists */
 
 .main-rootlist-rootlistDividerGradient {
     background: unset;
@@ -134,14 +195,6 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
 .artist-artistOverview-overview .main-entityHeader-withBackgroundImage h1 {
     font-size: 175px !important;
     line-height: 175px !important;
-}
-
-/** Hightlight selected playlist */
-.main-rootlist-rootlistItemLink.main-rootlist-rootlistItemLinkActive {
-    background: var(--spice-button);
-    border-radius: 4px;
-    padding: 0 10px;
-    margin: 0 5px 0 -10px;
 }
 
 .main-navBar-navBarLinkActive {
